test/foof/errors/unmatched-parens.foo.output
../test/foof/errors/unmatched-parens.foo(4,11): Unmatched parentheses - expected an opening `(` to come before:
4 |  (newline)))
              ^~~~~~

../test/foof/errors/unmatched-parens.foo(4,12): Unmatched parentheses - expected an opening `(` to come before:
4 |  (newline)))
               ^~~~~~

Test file run terminated due to error: #(struct:exn:fail Compilation aborted due to errors. #<continuation-mark-set>)
